--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,67 @@
 body {
-    background: #eee;
+    background: #555;
     text-align: center;
     padding: 0 25px;
 }
 
 #main {
-    width: 500px;
+    width: 700px;
     margin: auto;
     text-align: left;
-    background: white;
+    background: #7bff92;
     padding: 50px 60px;
     border: solid #ddd;
     border-width: 0 1px 1px 1px;
+    float:left;
+}
+form {
+    width: 346px;
+    margin: auto;
+    text-align: left;
+    background: #7bff92;
+    padding: 50px 60px;
+    border: solid #ddd;
+    border-width: 0 1px 1px 1px;
+    float:right;
+}
+input {
+    width: 300px;
+    height: 20px;
+}
+textarea {
+    width: 300px;
+}
+select {
+    width: 300px;
+    padding: 5px;
+    font-size: 16px;
+    line-height: 1;
+    border: 0;
+    border-radius: 0;
+    height: 25px;
+}
+#button {
+    margin-top:10px;
+    width: 300px;
+    height: 30px;
+}
+p {
+    margin: 0;
 }
 
-#main h1 {
-    margin-top: 0;
+.post {
+    border: solid 1px #ddd;
+}
+.bold {
+    font-weight: bold;
+}
+
+h1 {
+    margin: auto;
+    background: #7bff92;
+    padding: 15px 15px;
+    border: solid #ddd;
+    border-width: 0 1px 1px 1px;
     font-size: 35px;
 }
 
